# murmur

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  plan.md  pyproject.toml  requirements.txt  run.py  run_background.vbs
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: failure-and-fallbacks.md  index.md  live-pipeline.md  pipeline.md  transcription-and-cleanup.md  vad-segmentation.md
src/: __init__.py  __main__.py  audio.py  autostart.py  clipboard.py  config.py  hotkey.py  llm_postprocess.py  logger.py  main.py  media_control.py  notifications.py  settings_gui.py  transcription.py  transcription_live.py  tray.py  user_vocab.py  vad.py  vad_audio.py  vad_config.py  vad_live.py  vad_segmenter.py  vad_types.py
tests/: test_audio.py  test_autostart.py  test_clipboard.py  test_config.py  test_llm_postprocess.py  test_logger.py  test_main.py  test_notifications.py  test_settings_gui.py  test_transcription.py  test_transcription_live.py  test_tray.py  test_user_vocab.py  test_vad.py
